--- a/src/components/menubar/Menubar.css
+++ b/src/components/menubar/Menubar.css
@@ -1,22 +1,11 @@
-/* .Navbar{
-    background-color: aqua;
-    font-weight: bold;
-    position: fixed;
-    width: 100%;
-}
-#basic-nav-dropdown :hover{
-cursor: pointer;
-
-} */
-
 .Navbar {
-    background-color: aqua; 
+    background-color: rgb(100, 221, 252); 
     font-weight: bold;
     position: fixed; 
     top: 0; 
     left: 0; 
     width: 100%; 
-    z-index: 1000; 
+    z-index: 1000; /* Ensure navbar is above all content */
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
 }
 
@@ -24,9 +13,14 @@ cursor: pointer;
     display: block; 
     margin-top: 0; 
     transition: all 0.3s ease; 
+    background-color: rgb(218, 201, 201);
 }
 
 .Navbar .dropdown-menu {
     display: none; /* Default state is hidden */
+}
+
+.Navbar img{
+    width: 100px !important;
 }
 
