--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,17 +1,16 @@
 #home{
-    background-color: rgb(190, 96, 162);
     width: 100% !important;
+    min-height: 100vh;
+    background-color: bisque;
+    display: flex;
 }
-.content{
-    border: dotted;
-}
-.row{
+#home .row{
     width: 60%;
     margin-top: 200px !important;
 }
-h1{
+#home h1{
     font-size: 60px !important;
 }
-h3{
+#home h3{
     margin-top: 25px !important;
 }
