--- a/src/css/Website.css
+++ b/src/css/Website.css
@@ -36,33 +36,64 @@
 
 
 .service-section {
-    margin: 20px;
     font-family: Arial, sans-serif;
+    margin: 20px;
+    text-align: center;
+    width: 60%;
+    align-items: center;
+    margin-left: 250px;
   }
   
-  .toggle-button {
-    margin: 10px 0;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
+  .service-item {
+    margin-bottom: 15px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  .service-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .toggle-button:hover {
-    background-color: #0056b3;
-  }
-  
-  .details {
-    margin-top: 20px;
-    padding: 15px;
-    background-color: #f9f9f9;
+    padding: 10px;
+    background-color: #f7f7f7;
     border: 1px solid #ddd;
     border-radius: 5px;
-    transition: opacity 0.5s ease, max-height 0.5s ease;
-    overflow: hidden;
+    transition: background-color 0.3s;
   }
   
+  .service-header:hover {
+    background-color: #f0f0f0;
+  }
+  
+  .service-header h3 {
+    margin: 0;
+    font-size: 1.2rem;
+    flex: 1; /* Pushes the icon to the right */
+  }
+  
+  .service-header .icon {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #007bff;
+    transition: color 0.3s, transform 0.2s;
+  }
+  
+  .service-header .icon:hover {
+    color: #0056b3;
+    transform: scale(1.2); /* Slight enlargement effect on hover */
+  }
+  
+  .service-details {
+    margin-top: 10px;
+    padding: 10px 15px;
+    background-color: #fafafa;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    transition: max-height 0.3s ease-in-out;
+  }
+  
+
+
+
 
